<resources>
    <string name="app_name">StarlingRoundup</string>

    <!-- Main Feature -->
    <string name="main_feature_greeting">Hello, %1$s!</string>
    <string name="main_feature_intro">Your Round Up Total for this week so far is…</string>
    <string name="main_feature_button_round_up_and_save">Round Up &amp; Save</string>
    <string name="main_feature_last_round_up">Last round-up: %1$s</string>

    <!-- Transactions List -->
    <string name="transactions_this_week_title">Transactions this week</string>
    <string name="transactions_list_header_amount">Amount</string>
    <string name="transactions_list_header_roundup">Round Up</string>
    <string name="transactions_list_load_error">Sorry, we could not load your Transactions.</string>
    <string name="transactions_list_label_not_counted">Not counted</string>
    <string name="transactions_list_empty">There have been no transactions so far this week.</string>

    <!-- Transfer to Savings Goal modal -->
    <string name="transfer_to_savings_modal_header">Transfer %1$s to Savings Goal</string>
    <string name="transfer_to_savings_modal_intro">Choose a Savings Goal to transfer your Round Up Total to.</string>
    <string name="transfer_to_savings_modal_goals_load_error">Sorry, we could not load your Savings Goals.</string>
    <string name="transfer_to_savings_modal_goals_transfer_error">Sorry, we could not transfer to that Savings Goal right now.</string>
    <string name="transfer_to_savings_modal_goals_empty">You have no existing Savings Goals.</string>
    <string name="transfer_to_savings_modal_create_and_transfer">Create and transfer to a new Savings Goal</string>
    <string name="transfer_to_savings_modal_goal_amount_vs_target_and_percentage" translatable="false">%1$s / %2$s (%3$s%%)</string>

    <!-- Create Savings Goal dialog -->
    <string name="create_savings_goal_dialog_title">Create a new Savings Goal</string>
    <string name="create_savings_goal_dialog_goal_name_input_label">Goal name</string>
    <string name="create_savings_goal_dialog_goal_target_input_label">Goal target</string>
    <string name="create_savings_goal_dialog_goal_finish_button">Create Savings Goal</string>
    <string name="create_savings_goal_dialog_error_invalid_target">Please enter a valid currency amount for the Savings Goal Target.</string>
    <string name="create_savings_goal_dialog_error_invalid_name">Please enter a name for the Savings Goal.</string>

    <!-- Round-up Transfer Complete dialog -->
    <string name="roundup_transfer_complete_dialog_title">Transfer successful</string>
    <string name="roundup_transfer_complete_dialog">Your Round Up Total of %1$s has been successfully transferred to %2$s!</string>

    <!-- Generic -->
    <string name="transaction_outgoing_symbol" translatable="false">-</string>
    <string name="transaction_ingoing_symbol" translatable="false">+</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>

    <!-- Date & Time Utils -->
    <string name="date_time_since_just_now">just now</string>

    <string name="day_suffix_st">st</string>
    <string name="day_suffix_nd">nd</string>
    <string name="day_suffix_rd">rd</string>
    <string name="day_suffix_th">th</string>
    <string name="day_with_suffix">%1$d%2$s</string>

    <!-- Error messages -->
    <string name="error_could_not_fetch_data">Sorry, we could not fetch your data at this time.</string>
</resources>